# GAM

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  GamCommands.txt  GamConfig.txt  GamDataSelection.txt  GamUpdate.txt  README.md  actions-up-raw.txt  admin-settings-v1.json  appdirs.py  build.bat  dep-overrides.txt  developer-guide-rearchitecture.md  docs~  fix_all_imports.py  gam.py  index.html  params.json  pyproject.toml  python session 2  resolved.txt  setup-64.py  setup.py  whatsnew.txt
src/: .gitignore  GamAuthorization.txt  GamCommands.txt  GamConfig.txt  GamUpdate.txt  GoogleUpdate.adm  LICENSE  add_lib.py  admin-directory_v2.json  admin-settings-v1.json  admin-settings-v2.json  build.bat  cacerts.pem  callgam.py  cbcm-v1.1beta1.json  chat-v1.json  cloudprint-v2.json  contactdelegation-v1.json  controlflow.py  controlflow_test.py  cros-aue-dates.json  datastudio-v1.json  display.py  display_test.py  drive-v3beta.json  email-audit-v1.json  email-settings-v1.json  email-settings-v2.json  fakeusers.newer  fileutils.py  fileutils_test.py  gam-install.sh  gam-setup.bat  gam-universal2.spec  gam.exe.manifest  gam.iss  gam.py  gam.spec  gam.wxs  gam.wxs.template  (+23 more)
src/atom/: auth.py  http_interface.py  mock_http_core.py  service.py  url.py
src/auth/: __init__.py  oauth.py  oauth_test.py
src/cachetools/: __init__.py  abc.py  cache.py  lfu.py  lru.py  rr.py  ttl.py
src/dns/: _compat.py  dnssec.pyi  e164.py  entropy.py  exception.py  exception.pyi  grange.py  inet.py  ipv6.py  message.py  message.pyi  name.py  name.pyi  opcode.py  query.py  query.pyi  rdata.py  rdata.pyi  rdataset.pyi  rdatatype.py  renderer.py  resolver.py  resolver.pyi  reversename.py  rrset.py  set.py  tokenizer.py  tsig.py  version.py  wiredata.py  zone.py  zone.pyi
src/dns/rdtypes/: dnskeybase.pyi  dsbase.py  txtbase.py
src/gam/: __init__.py  __main__.py  admin-directory_v1.1beta1.json  cacerts.pem  cbcm-v1.1beta1.json  chat-v1.json  cloudidentityscim-v1.json  cloudidentityscim-v1alpha1.json  cloudidentityscim-v1beta1.json  constants.py  controlflow.py  controlflow_test.py  display.py  display_test.py  drive-v3beta.json  fileutils.py  fileutils_test.py  meet-v2beta.json  serviceaccountlookup-v1.json  transport.py  transport_test.py  utils.py  var.py
src/gam/atom/: __init__.py  auth.py  client.py  core.py  data.py  http.py  http_core.py  http_interface.py  mock_http.py  mock_http_core.py  mock_service.py  service.py  token_store.py  url.py
src/gam/auth/: __init__.py  oauth.py  oauth_test.py  signjwt.py  yubikey.py
src/gam/cmd/: admin.py  alerts.py  aliases.py  analytics.py  audit.py  browsers.py  businessprofile.py  caa.py  calendar.py  chromeapps.py  chromepolicies.py  cidevices.py  ciuserinvitations.py  cloudstorage.py  contacts.py  cros.py  customer.py  datatransfer.py  delegates.py  domains.py  forms.py  gelicenses.py  licenses.py  meet.py  mobile.py  notes.py  oauth.py  orgunits.py  people.py  printers.py  project.py  reports.py  reseller.py  resources.py  schemas.py  scim.py  send_email.py  sites.py  sso.py  tagmanager.py  (+4 more)
src/gam/gamlib/: __init__.py  action.py  api.py  clargs.py  entity.py  gapi.py  gdata.py  glaction.py  glapi.py  glcfg.py  glclargs.py  glentity.py  glgapi.py  glglobals.py  glindent.py  gliso8601.py  glmsgs.py  glskus.py  gluprop.py  glverlibs.py  indent.py  msgs.py  settings.py  skus.py  state.py  uprop.py  verlibs.py  yubikey.py
src/gam/gapi/: __init__.py  __init___test.py  caa.py  calendar.py  cbcm.py  chat.py  chromehistory.py  chromemanagement.py  chromepolicy.py  cloudresourcemanager.py  contactdelegation.py  errors.py  errors_test.py  licensing.py  reports.py  siteverification.py  storage.py  vault.py
src/gam/gdata/: __init__.py  auth.py  gauth.py  service.py  urlfetch.py
src/gam/iso8601/: __init__.py
src/gam/iso8601.shouldnotbehere/: iso8601.py
src/gam/util/: access.py  api.py  api_call.py  args.py  batch.py  classroom.py  config.py  connection.py  course_scope.py  crypto.py  csv_pf.py  customer.py  display.py  domain_filters.py  email.py  entity.py  errors.py  fileio.py  gdoc.py  group_parents.py  html.py  licensing.py  orgunits.py  output.py  row_filter.py  schema_utils.py  scim.py  svcacct.py  tags.py  uid.py
src/gam_mcp/: README.md  server.py
src/gapi/: __init__.py  __init___test.py  calendar.py  errors.py  errors_test.py  reports.py  storage.py  vault.py
src/gapi/directory/: __init__.py  cros.py  customer.py  resource.py
src/gdata/: service.py
src/gdata/alt/: app_engine.py  appengine.py
src/gdata/tlslite/: Checker.py  X509CertChain.py  mathtls.py
src/googleupdateadmx/GoogleUpdateAdmx/: GoogleUpdate.admx
src/httplib2/: __init__.py  socks.py
src/httplib2/test/: miniserver.py  test_ssl_context.py
src/httplib2shim/: __init__.py
src/httplib2shim/test/: httplib2_test.py
src/oauth2client/: __init__.py  _helpers.py  _pkce.py  appengine.py  client.py  devshell.py  django_orm.py  tools.py  xsrfutil.py
src/oauth2client/contrib/: _metadata.py  devshell.py  (+2 more)
src/passlib/: __init__.py  apache.py  apps.py  context.py  exc.py  hash.py  ifc.py  pwd.py  registry.py  totp.py
src/pyasn1_modules/: __init__.py  rfc2560.py
src/rsa/: __init__.py
src/tools/: _hashlib.vcxproj  a_atleast_b.py  apply_overrides.py  gen-wix-xml-filelist.py  mkGamRef.py  openssl.props  parse-aue.py  py314-ossl4.diff  set_version.py  ssd.mjs
src/travis/: .linux-x86_64-before-install.sh.swp  cfg_template.json  creds.tar.enc  linux-arm64-before-install.sh  linux-before-install.sh  linux-i686-precise-testing-before-install.sh  linux-install.sh  linux-x86-before-install.sh  linux-x86-install.sh  linux-x86_64-before-install.sh  linux-x86_64-install.sh  macos-before-install.sh  macos-install.sh  oauth2service.json.enc  osx-before-install.sh  osx-install.sh  osx-x86_64-before-install.sh  osx-x86_64-install.sh  osx-x86_64-sierra-testing-before-install.sh  set_printer_csv_filter.sh  svars-write.py  windows-before-install.sh  windows-install.sh  windows-x86-before-install.sh  windows-x86-install.sh  windows-x86_64-before-install.sh  windows-x86_64-install.sh
(+978 files in other folders)
