[project]
name = "gam7"
dynamic = [
    "version",
]
authors = [
    { name="Jay Lee", email="jay0lee@gmail.com" },
    { name="Ross Scroggs", email="Ross.Scroggs@gmail.com" },
]
# # The following files should be edited to match: setup.cfg, requirements.txt
dependencies = [
    "chardet>=5.2.0",
    "cryptography>=44.0.2",
    "distro; sys_platform=='linux'",
    "filelock>=3.18.0",
    "google-api-python-client>=2.167.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth>=2.39.0",
    "httplib2>=0.22.0",
    "lxml>=5.4.0",
    "passlib>=1.7.4",
    "pathvalidate>=3.2.3",
    "pyscard==2.2.1",
    "python-dateutil",
]
description = "CLI tool to manage Google Workspace"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
license = {text = "Apache License (2.0)"}
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
yubikey = ["yubikey-manager>=5.6.1"]

[project.scripts]
gam = "gam.__main__:main"

[project.urls]
Homepage = "https://github.com/GAM-team/GAM"
Issues = "https://github.com/GAM-team/GAM/issues"
Discussion = "https://groups.google.com/group/google-apps-manager"
Chat = "https://git.io/gam-chat"

[tool.hatch.version]
path = "src/gam/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gam"]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
