[project]
name = "gam7"
dynamic = [
    "version",
]
authors = [
    { name = "Jay Lee", email = "jay0lee@gmail.com" },
    { name = "Ross Scroggs", email = "Ross.Scroggs@gmail.com" },
]
dependencies = [
    "arrow==1.4.0",
    "chardet==7.4.3",
    "cryptography==47.0.0",
    "distro==1.9.0 ; sys_platform=='linux'",
    "filelock==3.29.0",
    "google-api-python-client==2.195.0",
    "google-auth-httplib2==0.3.1",
    "google-auth-oauthlib==1.3.1",
    "google-auth==2.50.0",
    "httplib2==0.31.2",
    "lxml==6.1.0",
    "passlib==1.7.4",
    "pathvalidate==3.3.1",
    "pysocks==1.7.1",
]
description = "CLI tool to manage Google Workspace"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
license-files = [
    "LICEN[CS]E*",
]

[project.license]
text = "Apache License (2.0)"

[project.optional-dependencies]
yubikey = [
    "yubikey-manager>=5.6.1",
]

[project.scripts]
gam = "gam.__main__:main"

[project.urls]
Homepage = "https://github.com/GAM-team/GAM"
Issues = "https://github.com/GAM-team/GAM/issues"
Discussion = "https://groups.google.com/group/google-apps-manager"
Chat = "https://git.io/gam-chat"

[tool.hatch.version]
path = "src/gam/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/gam",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
