[metadata]
name = Google Apps Manager
version = 6.0.7
description = Command line management for Google Workspaces
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/jay0lee/GAM
author = Jay Lee
author_email = jay0lee@gmail.com
license = Apache
license_file = src/license.rtf
keywords = google, oauth2, gsuite, google-apps, google-admin-sdk, google-drive, google-cloud, google-calendar, gam, google-api, oauth2-client, google-workspace
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache License

[options]
packages = find:
python_requires = >=3.7
install_requires =
    cryptography
    distro
    filelock
    google-api-python-client >= 2.1
    google-auth-httplib2
    google-auth-oauthlib >= 0.4.1
    google-auth >= 1.11.2
    httplib2 >= 0.17.0
    importlib.metadata
    passlib >= 1.7.2
    python-dateutil
    yubikey-manager >= 4.0.0
    pathvalidate

# used during pip install .[test]
[options.extras_require]
test = pre-commit

[options.entry_points]
console_scripts =
    gam = gam.__main__:main

[bdist_wheel]
universal = True
