[metadata]
name = GAM for Google Workspace
version = attr: gam.var.GAM_VERSION
description = Command line management for Google Workspaces
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/GAM-team/GAM
author = GAM Team 
author_email = google-apps-manager@googlegroups.com
license = Apache
license_files = LICENSE
keywords = google, oauth2, gsuite, google-apps, google-admin-sdk, google-drive, google-cloud, google-calendar, gam, google-api, oauth2-client, google-workspace
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache License

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    chardet
    cryptography
    distro; sys_platform == 'linux'
    filelock
    google-api-python-client >= 2.36
    google-auth-httplib2
    google-auth-oauthlib >= 0.4.6
    google-auth >= 2.3.3
    httplib2 >= 0.20.2
    lxml
    passlib >= 1.7.4
    pathvalidate
    python-dateutil
    yubikey-manager >= 5.0

[options.package_data]
* = *.pem

# used during pip install .[test]
[options.extras_require]
test = pre-commit

[options.entry_points]
console_scripts =
    gam = gam.__main__:main

[bdist_wheel]
universal = True
