[metadata]
name = GAM for Google Workspace
version = attr: gam.var.GAM_VERSION
description = Command line management for Google Workspaces
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/GAM-team/GAM
author = GAM Team 
author_email = google-apps-manager@googlegroups.com
license = Apache
license_files = LICENSE
keywords = google, oauth2, gsuite, google-apps, google-admin-sdk, google-drive, google-cloud, google-calendar, gam, google-api, oauth2-client, google-workspace
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: Apache License

[options]
packages = find:
python_requires = >= 3.9
# The following files should be edited to match: pyproject.toml, requirements.txt
install_requires =
    chardet >= 5.2.0
    cryptography >= 44.0.2
    distro; sys_platform == 'linux'
    filelock >= 3.18.0
    google-api-python-client >= 2.167.0
    google-auth-httplib2 >= 0.2.0
    google-auth-oauthlib >= 1.2.2
    google-auth >= 2.39.0
    httplib2 >= 0.22.0
    lxml >= 5.4.0
    passlib >= 1.7.4
    pathvalidate >= 3.2.3
    pyscard == 2.2.1
    python-dateutil
    yubikey-manager >= 5.6.1

[options.package_data]
* = *.pem

# used during pip install .[test]
[options.extras_require]
test = pre-commit

[options.entry_points]
console_scripts =
    gam = gam.__main__:main

[bdist_wheel]
universal = True
